# repo_generator

./: .gitignore  README.md  publish_pypi.sh  pyproject.toml
.github/workflows/: update_mamba.yml
Envs/MkFs/: Makefile
Envs/YMLs/: repo_generator.yml
repo_generator/: generator.py
src/repo_generator/: __init__.py  generator.py
