[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_generator"
version = "0.1.0"
description = "cast from repo_generator source to pypi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    
]

[tool.setuptools]
packages = ["repo_generator"]
